初期画面プロジェクト一式

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
   <title>OpenUi5 with OdataService</title>
 
   <script id="sap-ui-bootstrap"
-    src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
+    src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
     data-sap-ui-libs="sap.m"
     data-sap-ui-theme="sap_bluecrystal"
     data-sap-ui-xx-bindingSyntax="complex"
