--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Openui5-with-odataservice : How to integrate OdataService in OpenUI5" />
-
+    <meta name="keywords" content="OpenUI5,SAPUI5,UI5,OData,ODataService,Northwind,SAP,mobile,mobick">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>Openui5-with-odataservice</title>
